--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
         height: 40px;
         font-family: arial;
         font-size: 18pt;
+        -webkit-border-radius: 10px;
+        -khtml-border-radius: 10px;	
+        -moz-border-radius: 10px;
+        border-radius: 10px;      
       }
       
       .button#hover{
