--- a/public/index_static.html
+++ b/public/index_static.html
@@ -10,7 +10,8 @@
         left: 100px;
         top: 100px;
         font-family: "arial black";
-        font-size: 72pt;
+        font-size: 80px;
+        line-height: 88px; }
       }
       
       .subtitle {
